# DAPyr

./: README.md  environment_win.yml  numba.ipynb  pyproject.toml  requirements.txt  sv_example.ipynb  testbed.ipynb
.github/workflows/: publish.yml  testing.yml  workflow.yml
DA/: EnSRF.py  PF.py  StochEnKF.py
docs/: requirements.txt
docs/source/: conf.py
docs/source/refguide/: expt.rst  index.rst  obserrs.rst  runda.rst
docs/source/userguide/: examples.rst
models/: base_model.py  compiled_lorenz.py
samples/: L05_Ne10.expt  L05_Ne100.expt  L05_Ne20.expt  L05_Ne200.expt  L05_Ne300.expt  L05_Ne400.expt  L05_Ne50.expt  L05_Ne500.expt  L05_T200_Ne10.expt  L05_T200_Ne20.expt  L05_T200_obf10.expt  L05_T200_obf20.expt  L05_T500_Ne15.expt  L05_basic.expt  L05_enkf_sv.expt  L05_lpf_sv.expt  L96_basic2.expt
src/: main.ipynb  main.py  tutorial.ipynb
src/DAPpyr/: DA.py  EXPT.py  Exceptions.py  MISC.py  MODELS.py  __init__.py  runDA.py
src/DAPyr/: DA.py  INFLATION.py  OBS_ERRORS.py  __init__.py
tests/: test_DA.py  test_expt.py  test_inflation.py  test_loop.py  test_loop_fixvar.py  test_obs_errs.py
tests/states/: L05_Y.npy  L05_xf_0.npy  L63_Y.npy  L63_xf_0.npy  L96_Y.npy  L96_xf_0.npy  xa_assumed_obs_error_sd_gaussian.txt  xa_inflation_init_8.txt  xa_true_obs_error_sd_gaussian.txt
