[build-system]
[build-system]
requires = ["hatchling >= 1.26","numpy >= 1.26.4",
  "xarray >= 2022.11.0",
  "numba >= 0.60.0",
  "numbalsoda >= 0.3.5"]
build-backend = "hatchling.build"

[project]
name = "DAPpyr"
version = "0.0.1"
authors = [
  { name="Maria Nikolaitchik", email="mnikolai@umd.edu" },
]
description = "A lab-wide python package for running toy model DA simulations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy >= 1.26.4",
  "xarray >= 2022.11.0",
  "numba >= 0.60.0",
  "numbalsoda >= 0.3.5"
]
[project.urls]
Homepage = "https://github.com/nikolaitM/pyDA"
Issues = "https://github.com/pypa/sampleproject/issues"