[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "DAPyr"
version = "0.0.4"
authors = [
  { name="Maria Nikolaitchik", email="mnikolai@umd.edu" },
]
description = "A Python package for running toy model data assimilation experiments"
readme = "README.md"
keywords = ["data assimilation", "Lorenz", "DA"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "xarray (>=2022.11.0,<2025.6.1)",
  "numba (>=0.60.0,<1.0.0)",
  "numbalsoda (>=0.3.4,<1.0.0)",
  "numpy (>=1.26.4,<3.0.0)",
  "matplotlib (>=3.10.0,<4.0.0)",
  "scipy (>=1.15.2,<2.0.0)"
]
[project.urls]
Homepage = "https://github.com/nikolaitM/DApyr"
Issues = "https://github.com/nikolaitM/DApyr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/DAPyr"]